--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>Cigar2</title>
+    <title>ReroAgar.io</title>
 
     <link id="favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet" type="text/css">
@@ -32,14 +32,15 @@
     <div id="overlays" style="display: none;">
         <div id="helloDialog">
             <div class="form-group">
-                <h2 id="title">Cigar2</h2>
+                <h2 id="title">ReroAgar.io</h2>
             </div>
 
             <div class="form-group">
                 <input id="nick" class="form-control" placeholder="Nickname" maxlength="15">
                 <input id="skin" class="form-control"  placeholder="Skin Name">
                 <select id="gamemode" class="form-control" onchange="setserver(this.value)" required>
-                    <option value="localhost:443" selected>Local</option>
+                    <option value ="reroagar.glitch.me" selected>main</option>
+                  <option value="reroagar-min.glitch.me">Minions mode</option>
                 </select>
             </div>
 
